@@ -1,3 +1,12 @@
+2008-06-30 Samuel Abels <http://debain.org>
+
+	* src/Exscript/Interpreter/Code.py, src/Exscript/Interpreter/Term.py: Add
+	support for hex numbers by using the 0xABCD format.
+	* src/Exscript/Interpreter/stdlib/Connection/auto_authorize.py: Fix a
+	deadlock.
+	* src/Exscript/Interpreter/stdlib/Connection/exec.py: Fixed (did not work at
+	all).
+
 2008-06-29 Samuel Abels <http://debain.org>
 
 	* Makefile: Add an installer that pulls dependencies from the repository.
